--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
       <artifactId>jffi</artifactId>
       <version>1.2.23</version>
       <classifier>native</classifier>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.github.jnr</groupId>
