Build with Java 8 due to ByteBuffer NoSuchMethodError (#116, #158)
As detailed at https://github.com/lmdbjava/lmdbjava/issues/116, Java 9
introduced overridden methods with covariant return types in
ByteBuffer. The consequence is that Java 8 compatibility is
problematic if compiling with Java 9 or above. This commit therefore
performs the deployment step using Java 8. The fuller verification
step is still completed on Java 11.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -89,7 +89,8 @@ jobs:
     - name: Set up Java and Maven
       uses: actions/setup-java@v1
       with:
-        java-version: 11
+        # Java version 8 required due to https://github.com/lmdbjava/lmdbjava/issues/116
+        java-version: 8
 
     - name: Add OSSRH to the snapshot repositories list
       uses: s4u/maven-settings-action@v2.1.0
